# hcgui_project

./: .gitignore  Build.ps1  Build_Debug.ps1  Build_Release.ps1  README.md
examples/: CMakeLists.txt
examples/app1/: CMakeLists.txt
examples/app1/source/: app.cpp  app1.cpp
include/: linked_list.h  node_iterator.h
include/hcgui/: event_handler.h  frame.h  hcgui.h  hcgui_events.h  hcgui_internals.h
source/: event_handler.cpp  frame.cpp  hcgui.cpp  hcgui_events.cpp  hcgui_internals.cpp  linked_list.cpp  node_iterator.cpp
